# scicoqa

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  compress_repo.sh  extract_out.sh  index.html  logging.ini  pyproject.toml
config/: data.yaml  models.yaml  prompts.yaml
data/: README.md  scicoqa-real.jsonl
demo_stlite/: README.md
scicodeqa/core/: README.md  __init__.py  arxiv_version.py  batch.py  code_loader.py  data_iterator.py  experiment.py  llm.py  mistral_ocr.py
scicodeqa/evaluation/: __init__.py  compute_recall.py
scicodeqa/github/: __init__.py  db.py  issue_img_to_text.py  utils.py
scicodeqa/inference/: discrepancy_detection.py  discrepancy_eval.py  github_classification.py  github_validation.py  reproducibility_extraction.py  reproducibility_validation.py  synthetic_generation.py
scicoqa/core/: README.md  args.py  batch.py  data_iterator.py  dataset.py  experiment.py  mistral_ocr.py  prompt.py  token_counter.py
scicoqa/evaluation/: __init__.py  compute_recall.py
scicoqa/github/: crawl.py  utils.py
scicoqa/inference/: discrepancy_detection.py  discrepancy_eval.py  github_classification.py  github_validation.py  reproducibility_extraction.py  reproducibility_validation.py  synthetic_generation.py
static/css/: index.css
static/images/: chart-discrepancy-category.html  chart-discrepancy-category.json  chart-discrepancy-type.html  chart-discrepancy-type.json  chart-main-performance.html  chart-main-performance.json
static/js/: index.js
